# Advent-of-Code

./: 01.ipynb  01.js  02.js  03.ipynb  04.js  05.ipynb  05.js  07.ipynb  07.js  08.ipynb  09.js  12.js  13.js  15.js
2019/1/1/: index.js
2019/1/2/: index.js
2019/2/1/: index.js
2019/2/2/: index.js
2019/3/1/: index.js
2019/3/2/: index.js
2019/4/1/: index.js
2019/5/2/: index.js
2019/6/1/: index.js
2019/7/1/: index.js
2021/: 03.js  05.js  06.js  07.js  10.js  11.js  14.js
2022/: 02.ipynb  03.ipynb  04.ipynb  06.ipynb  07.ipynb
2023/: Cargo.toml  README.md  build_readme.ipynb  new_day.ipynb
2023/common/: Cargo.toml
2023/common/src/: lib.rs  profiler.rs
2023/day-00/: Cargo.toml
2023/day-00/src/: main.rs
2023/day-01/: Cargo.toml  answer.ipynb
2023/day-02/: profiler.rs
2023/day-03/bevy attempt/: Cargo.toml
2023/day-03/bevy attempt/src/: main.rs
2023/day-04/: Cargo.toml
2023/day-05/: Cargo.toml
2023/day-06/: Cargo.toml
2023/day-07/: Cargo.toml
2023/day-08/: Cargo.toml
2023/day-09/: Cargo.toml
2023/day-10/: Cargo.toml
2023/day-11/: Cargo.toml
2023/day-12/: Cargo.toml
2024/: Cargo.toml  README.md  build_readme.ipynb  new_day.ipynb
2024/day-00/: Cargo.toml
2024/day-01/: Cargo.toml
2025/: README.md  new-day.md
2025/day-01/: Cargo.toml
2025/day-02/: Cargo.toml
2025/day-03/: Cargo.toml
2025/day-04/: Cargo.toml
2025/day-05/: Cargo.toml  README.md  rustfmt.toml
2025/day-template/: Cargo.toml  README.md
4/2/: index.js
5/1/: index.js
6/2/: index.js
7/2/: index.js
day-01/: Cargo.toml
(+35 files in other folders)
