[package]
name = "day-03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
bevy = { version = "0.12" }
bevy-inspector-egui = "0.21.0"
# bevy_xpbd_2d = { version = "0.3.2", features = ["simd", "parallel"] }
bevy_xpbd_2d = { path = "../../../../Games/bevy_xpbd/crates/bevy_xpbd_2d", features = ["simd", "parallel"] }
bevy_mod_billboard = { git = "https://github.com/robtfm/bevy_mod_billboard/", branch = "bevy12" }
